# py-doc

./: Cargo.toml  README.md
.github/workflows/: release.yaml
assets/: app.js  document.html  sidebar.html
scripts/: install.ps1  install.sh
src/: generator.rs  main.rs  models.rs  parser.rs  resolver.rs
src/renderer/: templates.rs
templates/: app.js  index.html  module.html  style.css
