[package]
name = "pydoc-gen"
version = "0.1.0"
edition = "2024"
authors = ["Santiago Vasquez <kur4ise@example.com>"]
description = "A zero-config, blazing fast Python auto-documentation generator."

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.5"
ruff_python_parser = "0.0.4"
ruff_python_ast = "0.0.4"
tera = "1.19"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"