[package]
name = "py-doc"
version = "0.2.0"
edition = "2024"
authors = ["Santiago Vasquez <kur4ise@example.com>"]
description = "A zero-config, blazing fast Python auto-documentation generator."

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
walkdir = "2.5"
ruff_python_parser = "0.0.4"
ruff_python_ast = "0.0.4"
tera = "2.0.0"
pulldown-cmark = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
get-size2 = { version = "=0.10.1", features = ["derive", "compact-str"] }
ureq = "3.3.0"
rayon = "1.12.0"
regex = "1.13.1"

[package.metadata.binstall]
# Directs cargo-binstall to your GitHub Releases
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"

# Configure overrides for specific OS file formats
[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-fmt = "zip"

[package.metadata.binstall.overrides.'cfg(not(target_os = "windows"))']
pkg-fmt = "tgz" # uses .tar.gz
